--- a/register.html
+++ b/register.html
@@ -14,17 +14,17 @@
         <div class="input-container ic1">
           <input id="firstname" class="input" type="text" placeholder=" " />
           <div class="cut"></div>
-          <label for="firstname" class="placeholder">First name</label>
+          <label for="firstname" class="placeholder">Username</label>
         </div>
         <div class="input-container ic2">
           <input id="lastname" class="input" type="text" placeholder=" " />
           <div class="cut"></div>
-          <label for="lastname" class="placeholder">Last name</label>
+          <label for="lastname" class="placeholder">Email</label>
         </div>
         <div class="input-container ic2">
           <input id="email" class="input" type="text" placeholder=" " />
           <div class="cut cut-short"></div>
-          <label for="email" class="placeholder">Email</label>
+          <label for="email" class="placeholder">Password</label>
         </div>
         <a href="index.html"><button type="text" class="submit"> submit</button></a>        
       </div>
