--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="mainBody" id="section1">
   <div class="text-align-center">
     <h1 >PLAY WONDERFULL GAME</h1>
-    <h2>Experience New Wonderfull Experience</h2>
+    <h2>Experience New Wonderful Experience</h2>
     <button type="button" class="btn btn-warning play-now">Play Now</button>
   </div>
   <div class="center-bottom text-arrow">
@@ -89,8 +89,6 @@
         <a href="#section3" class=""><i class="arrow down"></i></a>    
         </div>
         
-      
-
     </div>
 
       <!-- Section 3 -->
@@ -139,7 +137,7 @@
       <div id="section5" class="d-flex flex-row bd-highlight center">
         <div class="center">
           <h1>TOP SCORES</h1>
-          <p>This top scores from various games provided from this platform.</p>
+          <p>This top scores from multiplayer provided from the game.</p>
           <table class="table text">
             <thead>
               <tr>
