--- a/topscore.html
+++ b/topscore.html
@@ -37,6 +37,36 @@
                 <td>LarrytheLobster100</td>
                 <td>17000</td>
               </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td>ProGamer888</td>
+                <td>18000</td>
+              </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td>Bengal98</td>
+                <td>17400</td>
+              </tr>
+              <tr>
+                <th scope="row">6</th>
+                <td>LarrytheLobster100</td>
+                <td>17000</td>
+              </tr>
+              <tr>
+                <th scope="row">7</th>
+                <td>ProGamer888</td>
+                <td>18000</td>
+              </tr>
+              <tr>
+                <th scope="row">8</th>
+                <td>Bengal98</td>
+                <td>17400</td>
+              </tr>
+              <tr>
+                <th scope="row">9</th>
+                <td>LarrytheLobster100</td>
+                <td>17000</td>
+              </tr>
             </tbody>
           </table>
           <a href="index.html"><button type="button" class="btn btn-warning">Kembali</button></a>
