--- a/game.html
+++ b/game.html
@@ -1,5 +1,3 @@
-<!-- index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,15 +9,15 @@
 	<title>Rock Paper Scissor</title>
 </head>
 <body class="background">
-	<a href="index.html">Kembali</a>
+	<button type="button" class="button"><a href="index.html">Kembali</a></button>
 	<section class="game">
-		<!--Title -->
+		
 		<div class="title">Rock Paper Scissor</div>
 		
-		<!--Display Score of player and computer -->
+		
 		<div class="score"></div>
         <div class="grid-container" >
-            <!--Options available to player to play game -->
+            
                 <div class="options grid-item" >
 					<h1 class="move">Choose your move</h1> 
                     <button class="rock"><img src="/assets/batu.png" alt="" class="image"></button>
@@ -27,7 +25,7 @@
                     <button class="scissor" ><img src="/assets/gunting.png" alt="" class="image"></button>	
                 </div>
             
-			<!--Options available to player to play game -->
+			
 				<div class="options grid-item">
 					<h1 class="move">Computer</h1>
 					<button class="rockcom"><img src="/assets/batu.png" alt="" class="image"></button>
@@ -37,10 +35,10 @@
         </div>
         </div>
 		
-		<!--Final result of game -->
+		
 		<div class="result"></div>
 		
-		<!--Reload the game -->
+		
 		<button class="reload"></button>
 
 	</section>
